Update to octopos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set (PROJECT_NAME "camera_module")
 
 project (${PROJECT_NAME})
 
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_CXX_FLAGS "-std=c++11 -g -Wall")
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
 
@@ -13,8 +14,17 @@ include_directories(include)
 
 file(GLOB SOURCES "src/*.cpp")
 
+# Create camera module
+add_library(${PROJECT_NAME} SHARED ${SOURCES})
+target_include_directories (${PROJECT_NAME} PUBLIC include src)
+set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 0)
+
 # Change name of executable to desired name
-add_executable(${PROJECT_NAME} ${SOURCES})
+#add_executable(${PROJECT_NAME} ${SOURCES})
+
+find_library(UTILITY NAMES Utility HINTS "/usr/local/lib/OctopOS")
+find_library(PUBLISHER NAMES Publisher HINTS "/usr/local/lib/OctopOS")
+find_library(SUBSCRIBER NAMES Subscriber HINTS "/usr/local/lib/OctopOS")
 
 # Check if pthreads.h is being used
 find_package(Threads REQUIRED)
@@ -22,5 +32,8 @@ if(THREADS_HAVE_PTHREAD_ARG)
   target_compile_options(PUBLIC ${PROJECT_NAME} "-pthread")
 endif()
 if(CMAKE_THREAD_LIBS_INIT)
-  target_link_libraries(${PROJECT_NAME} "${CMAKE_THREAD_LIBS_INIT}")
+  target_link_libraries(${PROJECT_NAME} "${CMAKE_THREAD_LIBS_INIT}"
+      "${UTILITY}"
+      "${PUBLISHER}"
+      "${SUBSCRIBER}")
 endif()
